PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-9_erreur_var_non_declaree_1/gcc-compile.txt
input.c:2:12: error: use of undeclared identifier 'x'
    return x;
           ^
1 error generated.

return code: 1
